<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:text="Welcome !"
            android:textSize="50dp"
            android:textColor="@color/blacklight"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:text = "@string/welcome"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:src="@drawable/logo"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="#F6F9FA"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vui lòng nhập địa chỉ email và mật khẩu của bạn"
            android:textStyle="bold"
            android:textColor="@color/blacklight"
            android:textSize="15dp"
            />

        <EditText
            android:id="@+id/edSDT"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/sdt"
            android:paddingLeft="10dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue"
            app:hintEnabled="false"
            android:layout_marginTop="20dp"
            >
            <EditText
                android:inputType="textPassword"
                android:id="@+id/edMk"
                android:paddingLeft="10dp"
                android:textColorHint="@color/blue"
                android:textColor="@color/blue"
                android:background="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgotFassWord"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/Login"
            android:textColor="@color/white" />
    </LinearLayout>




</LinearLayout>