<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".Registration">
    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:text="Welcome !"
            android:textSize="50dp"
            android:textColor="@color/blacklight"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:text = "@string/welcome"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:src="@drawable/logo"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="#F6F9FA"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vui lòng nhập địa chỉ email và mật khẩu của bạn"
            android:textColor="@color/blacklight"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:inputType="number"
            android:maxLength="10"
            android:id="@+id/edSdt"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:text="0971136408"
            android:paddingLeft="10dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue" />
        <EditText
            android:id="@+id/edFullName"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:text="Tuan Kiet"
            android:paddingLeft="10dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="20dp"
            app:hintEnabled="false"
            app:passwordToggleTint="@color/blue"
            >

            <EditText
                android:id="@+id/edPassWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:text="1"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue"
            >
            <EditText
                android:inputType="textPassword"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/edPassWord2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:text="1"
                android:paddingLeft="10dp"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/next"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/tvhaveAccount"
            android:textColor="@color/blue"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:text="@string/haveAccount"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>